--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <!--Герой-->
    
     <section class="main-section" >
-        <div class=" hero-section">
-        <h1 class="main-title">ЭФФЕКТИНОЕ РЕШЕНИЕ <br/> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-       <button type="button" class="model-btn"> Заказать услугу </button>
-       </div>
+        <div class=" hero-section overlay">
+           <h1 class="main-title">ЭФФЕКТИНОЕ РЕШЕНИЕ <br/> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+           <button type="button" class="model-btn"> Заказать услугу </button>
+          </div>
     </section>
    
     <!--Про компанію-->
